# faq_chatbot

./: .gitignore  README.MD  config.py  data_loader.py  embeddings.py  generator.py  main.py  model.py  pyproject.toml  retriever.py
